# rules_rust: https://github.com/bazelbuild/rules_rust/

load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "rtst",
    srcs = ["src/main.rs"],
)

# rules_docker: https://github.com/bazelbuild/rules_docker#rust_image

load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

rust_image(
    name = "rtst_image",
    srcs = ["src/main.rs"],
)
