# rules_rust: https://github.com/bazelbuild/rules_rust/

load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_binary",
    "rust_doc",
    "rust_test",
    "rust_doc_test",
)

rust_binary(
    name = "rtst",
    srcs = ["src/main.rs"],
)

rust_test(
    name = "rtst_unit_tests",
    crate = ":rtst",
)

rust_test(
    name = "rtst_integration_tests",
    srcs = ["tests/basic.rs"],
    # deps = [":hello_lib"],
)

rust_doc(
    name = "rtst_doc",
    dep = ":rtst",
)

# rules_docker: https://github.com/bazelbuild/rules_docker#rust_image

load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")

rust_image(
    name = "rtst_image",
    # srcs = ["src/main.rs"],
    binary = ":rtst",
)
